// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MegaMenuItem > matches snapshot 1`] = `
<a
  class="link group w-full no-underline p-4 text-sm transition-all rounded-theme-lg hover:bg-gray-25 dark:hover:bg-gray-850 hover:text-red-600 dark:hover:text-red-300"
  data-id="sds-megamenuitem"
  role="menuitem"
>
  <!--v-if-->
  <div
    class="flex flex-row gap-4"
  >
    <!--v-if-->
    <div
      class="flex flex-col"
    >
      <div
        class="flex flex-row justify-start w-full group"
      >
        <p
          class="group-hover:text-red-600 dark:group-hover:text-red-300 w-fit inline-block my-auto"
        >
          <span />
          <!--v-if-->
        </p>
      </div>
      <p
        class="text-gray-600 dark:text-gray-400"
      >
        
        
      </p>
    </div>
  </div>
</a>
`;

exports[`MegaMenuItem > matches snapshot with link kind "descriptive" prop assigned 1`] = `
"<a data-id="sds-megamenuitem" class="link group w-full no-underline p-4 text-sm transition-all rounded-theme-lg hover:bg-gray-25 dark:hover:bg-gray-850 hover:text-red-600 dark:hover:text-red-300" role="menuitem" kind="descriptive">
  <!--v-if-->
  <div class="flex flex-row gap-4">
    <!--v-if-->
    <div class="flex flex-col">
      <div class="flex flex-row justify-start w-full group">
        <p class="group-hover:text-red-600 dark:group-hover:text-red-300 w-fit inline-block my-auto"><span></span>
          <!--v-if-->
        </p>
      </div>
      <p class="text-gray-600 dark:text-gray-400"></p>
    </div>
  </div>
</a>"
`;

exports[`MegaMenuItem > matches snapshot with link kind "landing-page" prop assigned 1`] = `
"<a data-id="sds-megamenuitem" class="link group w-full no-underline p-4 text-sm transition-all rounded-theme-lg hover:bg-gray-25 dark:hover:bg-gray-850 hover:text-red-600 dark:hover:text-red-300" role="menuitem" kind="landing-page">
  <!--v-if-->
  <div class="flex flex-row gap-4">
    <!--v-if-->
    <div class="flex flex-col">
      <div class="flex flex-row justify-start w-full group">
        <p class="group-hover:text-red-600 dark:group-hover:text-red-300 w-fit inline-block my-auto"><span></span>
          <!--v-if-->
        </p>
      </div>
      <p class="text-gray-600 dark:text-gray-400"></p>
    </div>
  </div>
</a>"
`;

exports[`MegaMenuItem > matches snapshot with link kind "simple" prop assigned 1`] = `
"<a data-id="sds-megamenuitem" class="link group w-full no-underline p-4 text-sm transition-all rounded-theme-lg hover:bg-gray-25 dark:hover:bg-gray-850 hover:text-red-600 dark:hover:text-red-300" role="menuitem" kind="simple">
  <!--v-if-->
  <div class="flex flex-row gap-4">
    <!--v-if-->
    <div class="flex flex-col">
      <div class="flex flex-row justify-start w-full group">
        <p class="group-hover:text-red-600 dark:group-hover:text-red-300 w-fit inline-block my-auto"><span></span>
          <!--v-if-->
        </p>
      </div>
      <p class="text-gray-600 dark:text-gray-400"></p>
    </div>
  </div>
</a>"
`;

exports[`MegaMenuItem > matches snapshot with no props assigned 1`] = `
"<a data-id="sds-megamenuitem" class="link group w-full no-underline p-4 text-sm transition-all rounded-theme-lg hover:bg-gray-25 dark:hover:bg-gray-850 hover:text-red-600 dark:hover:text-red-300" role="menuitem">
  <!--v-if-->
  <div class="flex flex-row gap-4">
    <!--v-if-->
    <div class="flex flex-col">
      <div class="flex flex-row justify-start w-full group">
        <p class="group-hover:text-red-600 dark:group-hover:text-red-300 w-fit inline-block my-auto"><span></span>
          <!--v-if-->
        </p>
      </div>
      <p class="text-gray-600 dark:text-gray-400"></p>
    </div>
  </div>
</a>"
`;
